<resources>
    <string name="app_name">OxyTracker</string>
    <string name="enter_cylinder_id">Enter Cylinder Id</string>
    <string name="generate_qr_code">Generate QR Code</string>
    <string name="qr_code">QR Code</string>
    <string name="cylinder_type">Cylinder Type:</string>
    <string name="enter_here">Enter here</string>
    <string name="cylinder_id">Cylinder ID:</string>
    <string name="copy_cyl_id">Copy ID</string>
    <string name="save_qr">Download</string>
    <string name="share_qr">Share QR</string>
    <string name="generate_qr">Generate QR</string>
    <string name="gen_new_qr">Generate another QR</string>
    <string name="logout">LogOut</string>
    <string name="scan_qr">Scan QR</string>
    <string name="enter_manually">Enter Cylinder ID Manually</string>
</resources>