<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".qrcode.QRGeneratorActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="229dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        app:srcCompat="@drawable/appname"
        tools:ignore="VectorDrawableCompat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/qr_code_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:visibility="gone">

        <ImageView
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/qr_code"
            android:id="@+id/qr_code"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/qr_id_layout"
            android:src="@drawable/placeholder">
        </ImageView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/qr_code"
            android:id="@+id/qr_id_layout"
            android:orientation="horizontal"
            android:layout_marginTop="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/qr_code"
            android:visibility="gone"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cylinder_id"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/qr_id"
                android:textColor="@color/gray"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:textSize="20sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/qr_id_layout"
            app:layout_constraintTop_toBottomOf="@id/qr_id_layout"
            android:id="@+id/type_layout">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cylinder_type"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:textSize="22sp"/>
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textSize="22sp"
                android:id="@+id/cyl_type"
                android:inputType="text"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:hint="@string/enter_here"/>
        </LinearLayout>
        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:id="@+id/generate_qr_button"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/type_layout"
            app:cornerRadius="8dp"
            android:layout_height="60dp"
            android:text="@string/generate_qr_code"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:layout_width="wrap_content"
        android:id="@+id/qrGeneratorProgressBar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/qr_code_layout"
        android:visibility="gone"
        android:layout_marginTop="5dp"
        android:id="@+id/save_qr_layout"
        android:orientation="vertical">
        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:id="@+id/save_qr_button"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            app:cornerRadius="8dp"
            android:layout_height="60dp"
            android:text="@string/save_qr"/>
        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:id="@+id/copy_cyl_id"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            app:cornerRadius="8dp"
            android:layout_height="60dp"
            android:text="@string/copy_cyl_id"/>
        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:id="@+id/share_qr_btn"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            app:cornerRadius="8dp"
            android:layout_height="60dp"
            android:text="@string/share_qr"/>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:id="@+id/new_qr_btn"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="8dp"
        app:cornerRadius="8dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        style="?attr/materialButtonOutlinedStyle"
        android:visibility="gone"
        android:text="@string/gen_new_qr"/>

</androidx.constraintlayout.widget.ConstraintLayout>
